--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,4 +1,4 @@
-body {
+.page {
   font-family: "Inter", sans-serif;
   margin: 0;
   background-color: #1f1f1f;
@@ -10,69 +10,4 @@ body {
 img {
   max-width: 100%;
   display: block;
-}
-
-.container {
-  width: min(100%, 984px);
-  margin-inline: auto;
-}
-
-@media screen and (max-width: 1024px) {
-  .header__title {
-    font-size: 75px;
-    line-height: 1.1;
-    max-width: 600px;
-  }
-  .header__subtitle {
-    font-size: 30px;
-    line-height: 1.3;
-    max-width: 600px;
-  }
-  .intro__heading {
-    font-size: 45px;
-    line-height: 1.2;
-  }
-  .intro__text,
-  .intro__cite {
-    font-size: 24px;
-    line-height: 1.4;
-  }
-  .about__text {
-    font-size: 16px;
-    line-height: 1.5;
-  }
-  .container {
-    width: min(100%, 720px);
-    padding-inline: 16px;
-  }
-}
-
-@media screen and (max-width: 544px) {
-  .header__title {
-    font-size: 40px;
-    line-height: 1.2;
-    max-width: 100%;
-  }
-  .header__subtitle {
-    font-size: 16px;
-    line-height: 1.4;
-    max-width: 100%;
-  }
-  .intro__heading {
-    font-size: 32px;
-    line-height: 1.3;
-  }
-  .intro__text,
-  .intro__cite {
-    font-size: 24px;
-    line-height: 1.5;
-  }
-  .about__text {
-    font-size: 16px;
-    line-height: 1.6;
-  }
-  .container {
-    width: 100%;
-    padding-inline: 12px;
-  }
 }
