--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 @import url("../vendor/normalize.css");
-@import url("../vendor/fonts.css");
 @import url("../blocks/page.css");
+@import url("../blocks/container.css");
 @import url("../blocks/header.css");
 @import url("../blocks/hero.css");
 @import url("../blocks/intro.css");
