--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,13 +1,23 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .page {
   font-family: "Inter", sans-serif;
   margin: 0;
   background-color: #1f1f1f;
   color: #ffffff;
   line-height: 1.5;
+
   overflow-x: hidden;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 img {
   max-width: 100%;
+  height: auto;
   display: block;
 }
