--- a/blocks/page.css
+++ b/blocks/page.css
@@ -7,7 +7,7 @@
 .page {
   font-family: "Inter", sans-serif;
   margin: 0;
-  background-color: #1f1f1f;
+  background-color: #2a2c2f;
   color: #ffffff;
   line-height: 1.5;
 
