--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,5 @@
 @import url("../blocks/intro.css");
 @import url("../blocks/about.css");
 @import url("../blocks/footer.css");
+@import url("../blocks/photo-grid.css");
+@import url("../blocks/places.css");
